[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspark_ci"
version = "0.0.0"
requires-python = ">=3.8"
dependencies = [
    "pyspark",
    "requests"
]

[project.optional-dependencies]
dev = [
    "black",
    "chispa == 0.9.2",
    "isort",
    "pytest >= 7.1.3",
]

[tool.pytest.ini_options]
pythonpath = [
    "src/pyspark-ci"
]